<resources>
    <string name="app_name">IMDbApp</string>
    <string name="welcome_message">Hello World!</string>
    <string name="social_text">O podes ingresar con</string>
    <string name="registration_text">¿No tenes cuenta? <b><a href="http://www.google.com">Regístrate</a></b></string>
    <string name="login_guest"><a href="http://www.google.com">Continuar como Invitado</a></string>
    <string name="login_button">Login</string>
    <string name="pass_field_label">Contraseña</string>
    <string name="user_field_label">Usuario</string>
    <string name="search_hint">Buscar IMDB</string>
    <string name="movie1_name">Duna</string>
    <string name="movie2_name">MadMax</string>
    <string name="movie3_name">Batman</string>
    <string name="movie1_description">Película de ciencia ficción con implicaciones geopolíticas y ambientales</string>
    <string name="movie2_description">Carrera en futuro distópico</string>
    <string name="movie3_description">Super héroe son inteligencia y apariencia de murciélago</string>
    <string name="movie_name_default">Movie Name</string>
    <string name="movie_year_default">Year of Movie</string>
    <string name="movie_image_contentDescription">Movie Image</string>
    <string name="movie4_description">Locura e inmortalidad se juntan con la comedia</string>
    <string name="movie4_actors">Ryan Reynolds, Morena Baccarin, Josh Brolin</string>
    <string name="movie3_actors">Robert Pattinson, Zoë Kravitz</string>
    <string name="movie2_actors">Tom Hardy, Charlize Theron</string>
    <string name="movie1_actors">Timothée Chalamet, Zendaya</string>
    <string name="movie4_name">Deadpool</string>
    <string name="movie5_name">Spider-Man: No Way Home</string>
    <string name="movie5_description">Un chico con traje de lencería intentando salvar el mundo</string>
    <string name="movie5_actors">Tom Holland, Benedict Cumberbatch, Tobey Maguire</string>
    <string name="movie_actors_default">Movie Actors</string>
    <string name="imdb_logo_description">Imdb logo</string>
    <string name="login_frament_starting_text">Login blank fragment</string>
    <string name="access_name_label">Nombre</string>
    <string name="access_mail_label">Correo electrónico</string>
    <string name="access_pass_label">Contraseña</string>
    <string name="access_confirmation_button_text">Aceptar</string>
    <string name="pass_helper_instruction">La contraseña debe contener 8 caracteres</string>
    <string name="account_creation">Crear una cuenta</string>
    <string name="menu_start">Inicio</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_play">Play</string>
    <string name="menu_name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>