<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".access.RegistrationFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/multiplier_65dp"
        android:layout_height="@dimen/multiplier_34dp"
        android:layout_marginTop="@dimen/multiplier_26dp"
        android:contentDescription="@string/imdb_logo_description"
        android:src="@drawable/ic_imdb_logo_2016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/access_name_label"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEmailText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/access_mail_label"
        app:layout_constraintTop_toBottomOf="@+id/userNameText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPassText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/access_pass_label"
        app:helperText="La contraseña debe contener 8 caracteres"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/userEmailText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/access_confirmation_button_text"
        app:layout_constraintTop_toBottomOf="@+id/userPassText" />


</androidx.constraintlayout.widget.ConstraintLayout>